--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axos": "^0.0.1",
+    "bootstrap": "^5.2.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "jalali-react-datepicker": "^1.2.1",
+    "jquery": "^3.6.3",
     "next": "13.1.6",
+    "persian-datepicker": "^1.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "persian-date": "^1.1.0"
   }
 }
